Added new fragment for showing Scorecard over the Target and allowing user to save Scorecard

--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -24,7 +24,7 @@
         android:id="@+id/fOptionWindows"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Windows"
+        android:text="Show Card"
         android:textAllCaps="false"
         android:textSize="20dp" />
 
