Save preferences fix and add Web_Instruction.html file

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -57,7 +57,7 @@
 
         <EditText
             android:id="@+id/etDistance"
-            android:layout_width="wrap_content"
+            android:layout_width="162dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
@@ -65,6 +65,12 @@
             android:inputType="number"
             android:selectAllOnFocus="true"
             android:singleLine="true" />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/sp_Units"
+            android:prompt="@string/setUnitsPrompt" />
 
     </LinearLayout>
 
