--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rvLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:focusable="true"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:clickable="true"
     android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="horizontal"
-    android:id="@+id/rvLayout">
+    android:paddingLeft="5dp"
+    android:paddingTop="1dp"
+    android:paddingRight="5dp"
+    android:paddingBottom="1dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -19,50 +19,45 @@
 
 
         <LinearLayout
-            android:id="@+id/rowLayout"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/arrowScore1"
-                android:layout_width="94dp"
-                android:layout_height="match_parent"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/score_border"
                 android:gravity="center"
-                android:lines="2"
-                android:paddingHorizontal="10dp"
-                android:text="8"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#000"
-                android:textSize="36sp" />
+                android:text="@string/blankScore"
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/arrowScore2"
-                android:layout_width="94dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/score_border"
                 android:gravity="center"
-                android:paddingHorizontal="10dp"
-                android:text="8"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#000"
-                android:textSize="36sp" />
+                android:text="@string/blankScore"
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/arrowScore3"
-                android:layout_width="94dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/score_border"
                 android:gravity="center"
-                android:paddingHorizontal="10dp"
-                android:text="8"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#000"
-                android:textSize="36sp"/>
+                android:text="@string/blankScore"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/rating"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/score_border"
+                android:gravity="center"
+                android:text="@string/blankScore"
+                android:textSize="24sp" />
 
         </LinearLayout>
 
