--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -54,6 +54,7 @@
                 android:id="@+id/rating"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
                 android:background="@drawable/score_border"
                 android:gravity="center"
                 android:text="@string/blankScore"
