--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -60,6 +60,16 @@
                 android:text="@string/blankScore"
                 android:textSize="24sp" />
 
+            <TextView
+                android:id="@+id/percent"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/score_border"
+                android:gravity="center"
+                android:text="@string/blankScore"
+                android:textSize="24sp" />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
