--- a/app/src/main/res/layout/fragment_groupcard.xml
+++ b/app/src/main/res/layout/fragment_groupcard.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <WebView
-        android:id="@+id/wv_ScoreCard"
+        android:id="@+id/wv_GroupCard"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_share"
@@ -20,9 +20,9 @@
         android:id="@+id/btn_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/shareScoreCard"
+        android:text="@string/shareGroup"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/wv_ScoreCard"
+        app:layout_constraintTop_toBottomOf="@id/wv_GroupCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
