--- a/app/src/main/res/drawable/score_border.xml
+++ b/app/src/main/res/drawable/score_border.xml
@@ -4,7 +4,7 @@
 
     <!-- View background color-->
     <solid
-        android:color="@color/white">
+        android:color="#EDF1E4">
 
     </solid>
 
