--- a/app/src/main/res/layout/fragment_groupcard.xml
+++ b/app/src/main/res/layout/fragment_groupcard.xml
@@ -9,21 +9,30 @@
         android:id="@+id/wv_GroupCard"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_share"
+        app:layout_constraintBottom_toTopOf="@+id/cv_share"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
     </WebView>
 
-    <Button
-        android:id="@+id/btn_share"
-        android:layout_width="wrap_content"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_share"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/shareGroup"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/wv_GroupCard"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/wv_GroupCard">
+
+        <Button
+            android:id="@+id/btn_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/shareGroup" />
+    </androidx.cardview.widget.CardView>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
