--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="colorYellowRating">#E8B210</color>
     <color name="nDialog_cancel_bgcolor">#E6165F</color>
     <color name="nDialog_ok_bgcolor">#03A9F4</color>
 
